@@ -3,7 +3,7 @@
   "lowCaseName": "seopro",
   "description": "MODX SEO Pro is a MODX package that helps you when performing Search Engine Optimization (SEO) in MODX.",
   "author": "Sterc",
-  "version": "1.2.1-pl",
+  "version": "1.2.2-pl",
   "package":{
     "elements": {
       "plugins": [{
