@@ -1,5 +1,9 @@
 Changelog for SEO Pro.
 
+SEO Pro 1.2.2 pl
+==============
+- Add count back to pagetitle & longtitle
+
 SEO Pro 1.2.1 pl
 ==============
 - Set correct preview url for multi-context environments
